--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Numpy Array Operations"
+    "## Numpy Array Operations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,11 +64,238 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted Array:  [ 1  3  4  7  8  8  9 11 12]\n",
+      "Sorted 2D array by column [[1 2]\n",
+      " [1 3]\n",
+      " [2 3]]\n",
+      "Sorted 2D array by column [[1 3]\n",
+      " [1 2]\n",
+      " [2 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "unsorted = np.array([1,3,7,4,8,9,12,11,8])\n",
+    "\n",
+    "print(\"Sorted Array: \",np.sort(unsorted))\n",
+    "\n",
+    "\n",
+    "arr_2d_unsorted = np.array([[1,3],[1,2],[2,3]])\n",
+    "\n",
+    "print(\"Sorted 2D array by column\",np.sort(arr_2d_unsorted,axis=0))\n",
+    "print(\"Sorted 2D array by column\",np.sort(arr_2d_unsorted,axis=1))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even Numbers [ 2  4  6  8 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = np.array([1,2,3,4,5,6,7,8,9,10])\n",
+    "\n",
+    "even_numbers = numbers[numbers%2==0]\n",
+    "print(\"Even Numbers\",even_numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Filter with Mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Print Numbers greater than 5  [ 6  7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mask = numbers > 5\n",
+    "print(\"Print Numbers greater than 5 \",numbers[mask])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fancy indexing vs np.where()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5]\n",
+      "(array([5, 6, 7, 8, 9]),)\n",
+      "NP where  [ 6  7  8  9 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "indices = [0,2,4]\n",
+    "print(numbers[indices])\n",
+    "\n",
+    "where_result = np.where(numbers >5)\n",
+    "print(where_result)\n",
+    "\n",
+    "print(\"NP where \",numbers[where_result])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5 12 14 16 18 20]\n",
+      "[ True  True  True  True  True False False False False False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "condition_array = np.where(numbers > 5,numbers*2,numbers) \n",
+    "print(condition_array)\n",
+    "\n",
+    "condition_array_2 = np.where(numbers <= 5,True,False)\n",
+    "print(condition_array_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding and removing data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = np.array ([1,2,3])\n",
+    "arr2 = np.array([4,5,6])\n",
+    "\n",
+    "combined = np.concatenate((arr1,arr2))\n",
+    "print(combined)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Array Compatibility "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compatibility shapes True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array ([1,2,3])\n",
+    "b = np.array([4,5,6])\n",
+    "c = np.array([7,8,9])\n",
+    "\n",
+    "\n",
+    "print(\"Compatibility shapes\", a.shape == b.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With new Row [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "With new column [[1 2 3]\n",
+      " [3 4 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "original = np.array([[1,2],[3,4]])\n",
+    "new_row = np.array([[5,6]])\n",
+    "\n",
+    "with_new_row = np.vstack((original,new_row))\n",
+    "\n",
+    "print(\"With new Row\",with_new_row)\n",
+    "\n",
+    "\n",
+    "new_col = np.array([[3],[4]])\n",
+    "\n",
+    "with_new_col = np.hstack((original,new_col))\n",
+    "\n",
+    "print(\"With new column\",with_new_col)"
+   ]
   },
   {
    "cell_type": "code",
