--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -299,6 +299,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array after deletion:  [1 2 4 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1,2,3,4,5])\n",
+    "deleted = np.delete(arr,2)\n",
+    "\n",
+    "print(\"Array after deletion: \",deleted)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
