Fix execution counts and clean up print statements in phase1, phase2, and phase4 notebooks

--- a/phase1.ipynb
+++ b/phase1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -35,8 +35,7 @@
     "arr_1d = np.array([1,2,3])\n",
     "arr_2d = np.array([[1,2,3],[4,5,6]])\n",
     "print(\"Id array\",arr_1d)\n",
-    "print(\"2D array\",arr_2d)\n",
-    "\n"
+    "print(\"2D array\",arr_2d)"
    ]
   },
   {
@@ -127,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +153,7 @@
     "\n",
     "tensor = np.array([[[1,2],[5,4]],[[3,6],[9,5]]])\n",
     "\n",
-    "print(\"Tensor: \\n\",tensor)\n"
+    "print(\"Tensor: \\n\",tensor)"
    ]
   },
   {
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +186,7 @@
     "print(\"Shape: \",arr.shape)\n",
     "print(\"Dimension: \",arr.ndim)\n",
     "print(\"Size: \",arr.size)\n",
-    "print(\"DType: \",arr.dtype)\n"
+    "print(\"DType: \",arr.dtype)"
    ]
   },
   {
@@ -199,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +237,7 @@
     "print(\"Revaled Array: \",revaled)\n",
     "\n",
     "transpose = reshaped.T\n",
-    "print(\"Transpose: \\n\",transpose)\n"
+    "print(\"Transpose: \\n\",transpose)"
    ]
   }
  ],
