--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -98,7 +98,7 @@
     "arr_2d_unsorted = np.array([[1,3],[1,2],[2,3]])\n",
     "\n",
     "print(\"Sorted 2D array by column\",np.sort(arr_2d_unsorted,axis=0))\n",
-    "print(\"Sorted 2D array by column\",np.sort(arr_2d_unsorted,axis=1))\n"
+    "print(\"Sorted 2D array by column\",np.sort(arr_2d_unsorted,axis=1))"
    ]
   },
   {
@@ -125,7 +125,7 @@
     "numbers = np.array([1,2,3,4,5,6,7,8,9,10])\n",
     "\n",
     "even_numbers = numbers[numbers%2==0]\n",
-    "print(\"Even Numbers\",even_numbers)\n"
+    "print(\"Even Numbers\",even_numbers)"
    ]
   },
   {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -260,13 +260,12 @@
     "b = np.array([4,5,6])\n",
     "c = np.array([7,8,9])\n",
     "\n",
-    "\n",
     "print(\"Compatibility shapes\", a.shape == b.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
