--- a/phase4.ipynb
+++ b/phase4.ipynb
@@ -33,18 +33,18 @@
    "source": [
     "array1 = np.array([[1,2,3],[4,5,6]])\n",
     "array2 = np.random.rand(3,3)\n",
-    "array3 = np.zeros((3,3))\n"
+    "array3 = np.zeros((3,3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.save(\"array1.npy\",array1)\n",
     "np.save(\"array2.npy\",array2)\n",
-    "np.save(\"array3.npy\",array3)\n"
+    "np.save(\"array3.npy\",array3)"
    ]
   },
   {
