--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -315,18 +315,11 @@
     "\n",
     "print(\"Array after deletion: \",deleted)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.7)",
    "language": "python",
    "name": "python3"
   },
