--- a/phase3.ipynb
+++ b/phase3.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
     "\n",
     "avg_sales = np.mean(sales_data[:,1:],axis=1)\n",
     "\n",
-    "print(\"Average Sales\" , avg_sales)\n"
+    "print(\"Average Sales\" , avg_sales)"
    ]
   },
   {
@@ -117,13 +117,12 @@
    "source": [
     "# Cumulative Sum\n",
     "cumsum = np.cumsum(sales_data[:,:],axis=1)\n",
-    "print(\"Cumulative Sum\", cumsum)\n",
-    " "
+    "print(\"Cumulative Sum\", cumsum)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +225,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.7)",
    "language": "python",
    "name": "python3"
   },
