--- a/phase4.ipynb
+++ b/phase4.ipynb
@@ -120,7 +120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.12.7)",
    "language": "python",
    "name": "python3"
   },
